# Homuresu

./: .gitignore  CMakeLists.txt  README.md  homuresu.bat  homuresu.sh
.github/workflows/: house.yml  wealth.yml
assets/map/: map.txt
game/client/: client.c  main.c  manage.c  memory.c
game/client/include/: client.h  general.h  iencli.h
game/client/network/: client.c  get.c  init.c  send.c  send_packet.c
game/server/: cli_accept.c  main.c  manage.c  memory.c  server.c
game/server/include/: general.h  server.h
game/server/network/: action.c  client.c  connection.c  get.c  get_packet.c  init.c  init_srv.c  send_packet.c  server.c  srv_struct.c  utils.c
include/: menu.h
lib/blib/: .gitignore  Makefile
lib/blib/blib/: bmemory.h  bprint.h
lib/blib/include/blib/: bstring.h
lib/blib/lib/blib/: Makefile
lib/blib/lib/blib/file/: bread_fd.c
lib/blib/lib/blib/include/blib/: bfile.h
lib/blib/lib/linked_list/: Makefile
lib/blib/lib/linked_list/include/: linked_list.h
lib/blib/lib/linked_list/src/: add_node.c  print_list.c  remove_node.c
lib/linked_list/: Makefile
lib/linked_list/include/: linked_list.h  list.h
lib/linked_list/src/: create_list.c  create_node.c  destroy_list.c  destroy_node.c
resources/: ammo_box.glb  amogus.glb  evilKnight.glb  untitled.mtl
resources/batarang/: Batarang.mtl
resources/deadpool/: untitled.mtl
resources/dorion/: Dorion2.glb
resources/maxwell/: Maxwell.glb
resources/midoriya/: Midoriya.glb  bald_Midoriya.glb
src/: main.c  menu.c
src/client/: action.c  anticheat.c  client.c  main.c  mainLoop.c  manage.c  menu.c  selection_menu.c
src/client/check/: checkCollision.c
src/client/create/: createBullet.c
src/client/draw/: drawBullet.c  drawCube.c  drawGame.c  drawObs.c  drawPlayer.c  drawProjectile.c  drawTwoD.c
src/client/include/: iencli.h  includes.h
src/client/init/: InitWindow.c  initBullet.c  initCamera.c  initGame.c  initItem.c  initMenu.c  initModels.c  initMusic.c  initPlayer.c  initProjectile.c  initSounds.c  initSprite.c  initStat.c  initWall.c  initWindow.c
src/client/manage/: manageBullet.c  managePlayer.c  manageProjectile.c  manageSounds.c  manageSprite.c
src/client/network/: get.c  get_packet.c  init_client.c  send.c
src/client/update/: updateBullet.c  updateCollision.c  updateEvent.c  updateGame.c  updateKeyboard.c  updateMouse.c  updateProjectile.c
src/client/update/updateKeyboard/: updateEnter.c  updateR.c  updateWalk.c
src/server/: action.c  cli_accept.c  main.c  manage.c  server.c
src/server/include/: includesServer.h  server.h
src/server/network/: add_client.c  get_packet.c  rm_client.c  send_packet.c
